[project]
name = "da360"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# By adding triton here, uv is allowed to apply the custom index to it!
dependencies = [
    "depth-anything-3",
    "numpy<2",
    "torch>=2.12.0.dev20260319",
    "torchvision>=0.26.0.dev20260319",
    "transformers>=5.3.0",
    "triton; sys_platform == 'linux'",
]

[tool.uv]
prerelease = "allow"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
triton = { index = "pytorch-cu128" }
depth-anything-3 = { git = "https://github.com/ByteDance-Seed/depth-anything-3" }
